# Self-Driving-Algorithm-Library

./: .gitignore  .gitmodules  LICENSE  README.md
ComputerVision/YOLO3-detecction/: README.md  test.cpp
ComputerVision/YOLO3-detection/: CMakeLists.txt  yolo3.cpp
ComputerVision/object-tracking/: CMakeLists.txt  README.md  kcf-tracker.cpp  test.cpp
PathPlanning/FrenetOptimalTrajectory/: Frenet.cpp  Frenet.h  cubicSplines.h
